# zipapp-creator

./: .gitignore  README.md  build-windows_x86_64.bat  hook-pyguiadapterlite.py  main.py  pyproject.toml  requirements.txt  zipapp-creator-w.json  zipapp-creator.json  zipapp-creator_x86_64.exe.spec  zipapp_configs.json
zipapp_creator/: appconfig.py  appsettings.py  assets.py  common.py  consts.py  i18n.py  messages.py  selfextracting.py  utils.py
zipapp_creator/_assets/: LICENSE  startup.vbs
zipapp_creator/_assets/locales/: en_US.po  zh_CN.po
zipapp_creator/_assets/locales/en_US/LC_MESSAGES/: zc.mo
zipapp_creator/_assets/locales/zh_CN/LC_MESSAGES/: zc.mo
zipapp_creator/app/: __init__.py  dialogs.py  impl.py  menus.py  utils.py  winconfig.py  winevents.py  winmenu.py
