[tool.poetry]
name = "zipapp-creator"
version = "0.1.0"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
platformdirs = "^4.5.0"
pyguiadapterlite = ">=0.6.11"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "tsinghua"
#url = "http://mirrors.aliyun.com/pypi/simple/"
#priority = "primary"